# RePAC

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
repac/: __init__.py  baselines.py  evidence.py  metrics.py  model.py  priors.py
results/: canonical_main_by_dataset_scenario.csv  canonical_main_overall.csv  component_ablation_overall.csv  mechanism_mean_controlled_overall.csv  missing_rate_overall.csv  missing_rate_plugin_comparison.csv  multisource_transfer_overall.csv  nontraffic_overall.csv  nontraffic_plugin_comparison.csv  plugin_baselines_by_dataset_scenario.csv  plugin_baselines_overall.csv  source_transfer_by_pair.csv
scripts/: smoke_test.py  summarize_results.py
tests/: test_model.py
