[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repac"
version = "0.1.0"
description = "Reliability-conditioned Prior-Aligned Correction for spatiotemporal reconstruction"
requires-python = ">=3.9"
dependencies = ["torch>=2.0", "numpy>=1.23"]

[tool.setuptools.packages.find]
include = ["repac*"]
